--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # Built Visual Studio Code Extensions
 *.vsix
 *.csproj
+.gitattributes
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
